; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csfg_get_platform_identifier.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_cs.c_csfg_get_platform_identifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileglob = type { i64 }
%struct.vnode = type { i32 }

@DTYPE_VNODE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @csfg_get_platform_identifier(%struct.fileglob* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fileglob*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.vnode*, align 8
  store %struct.fileglob* %0, %struct.fileglob** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %8 = call i64 @FILEGLOB_DTYPE(%struct.fileglob* %7)
  %9 = load i64, i64* @DTYPE_VNODE, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

12:                                               ; preds = %2
  %13 = load %struct.fileglob*, %struct.fileglob** %4, align 8
  %14 = getelementptr inbounds %struct.fileglob, %struct.fileglob* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to %struct.vnode*
  store %struct.vnode* %16, %struct.vnode** %6, align 8
  %17 = load %struct.vnode*, %struct.vnode** %6, align 8
  %18 = icmp eq %struct.vnode* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  store i32 0, i32* %3, align 4
  br label %24

20:                                               ; preds = %12
  %21 = load %struct.vnode*, %struct.vnode** %6, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @csvnode_get_platform_identifier(%struct.vnode* %21, i32 %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %19, %11
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @FILEGLOB_DTYPE(%struct.fileglob*) #1

declare dso_local i32 @csvnode_get_platform_identifier(%struct.vnode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
